<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="simon.test.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewEingabe"
        android:id="@+id/textView" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="25dp"
        android:layout_alignParentStart="true"
        android:hint="@string/editTextEingabe"
        android:id="@+id/Eingabe"
        android:maxLines="1" />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/button"
        android:background="@android:color/white"
        android:hint="@string/startButton"
        android:layout_alignBaseline="@+id/Eingabe"
        android:layout_alignBottom="@+id/Eingabe"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="9"
        android:text="@string/textViewExample"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true" />
</RelativeLayout>
