...
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="353dp"
        android:layout_below="@+id/ausgabe2"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/linearLayout"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout">

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="#000080"
            android:text="@string/button_back"
...
